<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/settingsPreferenceScreen"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:focusable="true"
      android:focusableInTouchMode="true">

    <PreferenceCategory
        android:title="@string/title_camera_settings">

        <SwitchPreference
                android:key="@string/PREFERENCE_KEY_IMAGE_PREFERENCE"
                android:summaryOff="@string/label_fast_process"
                android:summaryOn="@string/label_nice_image"
                android:title="@string/setting_image_preference" />

        <SwitchPreference
            android:key="@string/PREFERENCE_KEY_SHUTTER_COLOR"
            android:summaryOff="@string/label_white"
            android:summaryOn="@string/label_black"
            android:title="@string/setting_shutter_color_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_network_settings">

        <SwitchPreference
            android:key="@string/PREFERENCE_KEY_ONLINE_IMAGE"
            android:summaryOff="@string/label_disable_online_image"
            android:summaryOn="@string/label_enable_online_image"
            android:title="@string/setting_online_image" />

    </PreferenceCategory>

</PreferenceScreen>
