<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_live">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.arpadfodor.android.paw_scanner.view.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.arpadfodor.android.paw_scanner.view.ClassifierFragment"
        android:label="@string/title_home"
        tools:layout="@layout/classifier_fragment" />

    <fragment
        android:id="@+id/navigation_load"
        android:name="com.arpadfodor.android.paw_scanner.view.LoadFragment"
        android:label="@string/title_load"
        tools:layout="@layout/load_fragment" />

</navigation>